@@ -4,7 +4,7 @@ ScaleShape <- proto(ScaleDiscrete, expr={
   solid <- TRUE
 
   new <- function(., name=NULL, solid=TRUE, limits = NULL, labels = NULL) {
-    .$proto(name=name, solid=solid, .limits = limits, .labels = labels)
+    .$proto(name=name, solid=solid, limits = limits, .labels = labels)
   }
   
   breaks <- function(.) {
